# shortlink-mialbarinov

./: .env.test  .gitignore  Dockerfile  README.md  TODO.md  TODO_TESTS.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  render.yaml
app/: config.py  database.py  main.py
app/api/: admin.py  links.py
app/auth/: models.py  router.py  schemas.py  service.py
app/models/: link.py
app/schemas/: link.py
app/services/: link_service.py
app/utils/: shortener.py
frontend/: app.js  dashboard.html  index.html  style.css
load/: locustfile.py
tests/: conftest.py
tests/api/: test_links.py  test_links_auth.py
tests/auth/: test_router.py
