[project]
name = "shortlink-mialbarinov"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail",email = "mialbarinov@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg (>=3.3.3,<4.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "locust (>=2.43.3,<3.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
